sass/main.scss
$color-primary: #374d74;
$color-primary-dark: #3d6994;
$color-empasize: #f1b997;
$shadow: 1px 2px 10px rgba(0, 0, 0, 0.3);
$color-grey-light: #f1f6f9;
$color-secondary: darken(#fec37d, 5%);

$font-primary: 'Ubuntu', sans-serif;
$font-bold: 'Open Sans Condensed', sans-serif;
$font-code: 'Ubuntu Mono', monospace;

$bp-xl: 78.125em; // 1250px
$bp-lg: 71.875em; // 1150px
$bp-m: 65.625em; // 1050px
$bp-ms: 52.25em; // 836px
$bp-s: 43.75em; // 700px
$bp-xs: 32.125em; // 514px
$bp-xxs: 29.2875em; // 467px
$bp-xxxs: 25.125em; // 402px
$bp-xxxxs: 22.5em; // 360px
$bp-smallest: 20em; // 320px

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  font-size: 62.5%;
  scroll-behavior: smooth;

  @media only screen and(max-width: $bp-xl) {
    font-size: 60%;
  }
  @media only screen and(max-width: $bp-lg) {
    font-size: 57%;
  }
  @media only screen and (max-width: $bp-m) {
    font-size: 55%;
  }
  @media only screen and (max-width: $bp-ms) {
    font-size: 50%;
  }
  @media only screen and (max-width: $bp-xs) {
    font-size: 48%;
  }
  @media only screen and (max-width: $bp-xxs) {
    font-size: 46%;
  }
  @media only screen and (max-width: $bp-xxxs) {
    font-size: 45%;
  }
  @media only screen and (max-width: $bp-xxxxs) {
    font-size: 40%;
  }
}

body {
  font-family: $font-primary;
  font-weight: 300;
  background-color: $color-grey-light;
  overflow-x: hidden;
  max-width: 100%;
}

::-webkit-scrollbar {
  width: 10px;

  &-track {
    background-color: lighten($color-primary, 5%);
    box-shadow: inset 0 0 5px grey;
  }
  &-thumb {
    background: darken($color-empasize, 5%);
    border-radius: 10px;
    &:hover {
      background: lighten($color-empasize, 5%);
      border-radius: 10px;
    }
  }
}

.navbar {
  background-color: $color-primary;
  transition: all 0.5s ease-in-out;

  &__container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 5rem;
  }

  &__list {
    font-size: 2.2rem;
    text-decoration: none;
    color: $color-grey-light;
    margin: 0 3.5rem;

    &:hover {
      transform: skewY(0.5deg) skewX(5deg) scale(1.1);
      color: $color-secondary;
    }
    &:focus {
      outline: none;
    }
  }
}
.sticky {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100vw;
  box-shadow: $shadow;
  z-index: 10;
}

.header {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url('/images/nasa.png');
  height: 85vh;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  // @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
  //   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
  //   clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
  //   height: 95vh;
  // }

  @media only screen and (max-width: $bp-ms) {
    height: 80vh;
  }
  &__text-box {
    max-width: 120rem;

    @media only screen and (max-width: $bp-s) {
      margin: 0 8rem;
    }
    @media only screen and (max-width: $bp-xs) {
      margin: 0 5rem;
    }
    @media only screen and (max-width: $bp-xxs) {
      margin: 0 2rem;
    }
    @media only screen and (max-width: $bp-xxxs) {
      margin: 0 1rem;
    }
  }

  &__text-box &__text {
    color: $color-grey-light;
    letter-spacing: 0.2rem;
    font-weight: 300;
  }
  &__text-main {
    font-size: 5rem;
    animation-name: moveInLeft;
    animation-duration: 1.3s;
    animation-timing-function: ease-out;
  }

  &__text-sub {
    font-size: 4rem;
    margin-bottom: 4rem;
    animation-name: moveInRight;
    animation-duration: 0.8s;
    animation-timing-function: ease-out;
    transition: all 0.5s ease-in-out;
    @media only screen and (max-width: $bp-xs) {
      animation: none;
    }
  }
  &__text-bold {
    font-family: $font-bold;
    color: $color-empasize;
    font-weight: 700;
    font-size: 5.4rem;
    animation-name: moveInRight;
    animation-duration: 1s;
    animation-timing-function: ease-out;
    transition: all 0.5s ease-in-out;
    @media only screen and(max-width: $bp-xs) {
      animation: none;
    }
  }
}

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(100px);
  }
  40% {
    opacity: 0;
  }
  80% {
    transform: translateX(-10px);
  }
  100% {
    opacity: 1;
    transform: translate(0);
  }
}
@keyframes moveInRight {
  0% {
    opacity: 0;
    transform: translateX(-30px);
  }
  40% {
    transform: translateY(-10px);
  }

  80% {
    transform: translateY(5px);
  }
  100% {
    transform: translate(0);
  }
}
.section {
  font-size: 2rem;
  background-color: $color-grey-light;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  &__title {
    font-family: $font-bold;
    font-weight: 700;
    font-size: 3.5rem;
    color: $color-empasize;
    margin-top: 5rem;
    text-align: center;
  }
  &__underline {
    line-height: 0.5rem;
    width: 6rem;
    border: 1px solid $color-empasize;
  }
}
/* ... */

